--- a/src/main/resources/templates/user/ChangePassword.html
+++ b/src/main/resources/templates/user/ChangePassword.html
@@ -6,7 +6,7 @@
     <title>AdminLTE 3 | Registration Page</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script src="/jquery/dist/jquery.js"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
@@ -28,25 +28,28 @@
         <div class="card-body register-card-body">
             <p class="login-box-msg">修改密码</p>
 
-            <form action="/AdminLTE-3.0.5/index.html" method="post">
+            <form>
+                <p id="alertOld" style="color: rgba(255,0,0,0.5);margin: 0;font-size: 80%"></p>
                 <div class="input-group mb-3">
-                    <input type="password" class="form-control" placeholder="旧密码">
+                    <input id="oldpassword" type="password" class="form-control" placeholder="旧密码" onchange="Oldlistener()">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
                         </div>
                     </div>
                 </div>
+                <p id="alertRewrite" style="color: rgba(255,0,0,0.5);margin: 0;font-size: 80%;"></p>
                 <div class="input-group mb-3">
-                    <input type="password" class="form-control" placeholder="再次输入旧密码">
+                    <input id="rewriteoldpassword"type="password" class="form-control" placeholder="再次输入旧密码" onchange="RewriteOldlistener()">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
                         </div>
                     </div>
                 </div>
+                <p id="alertNew" style="color: rgba(255,0,0,0.5);margin: 0;font-size: 80%;"></p>
                 <div class="input-group mb-3">
-                    <input type="password" class="form-control" placeholder="新密码">
+                    <input id="newpassword" type="password" class="form-control" placeholder="新密码" onchange="Newlistener()">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
@@ -55,10 +58,10 @@
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <button type="submit" class="btn btn-primary btn-block" style="background-color: #dc3545" onclick="window.location.href='./userInformation'">返回</button>
+                        <a href="/user/MyInformation" class="btn btn-primary btn-block" style="background-color: #dc3545;color: white">返回</a>
                     </div>
                     <div class="col-6">
-                        <button type="submit" class="btn btn-primary btn-block">确认</button>
+                        <button type="button" class="btn btn-primary btn-block" onclick="submitChange()">确认</button>
                     </div>
                     <!-- /.col -->
                 </div>
@@ -70,6 +73,7 @@
 <!-- /.register-box -->
 
 <!-- jQuery -->
+<script src="/MyInfoJs/ChangePassword.js"></script>
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
