--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -178,7 +178,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="./AddressManage.html" class="nav-link">
+                        <a href="/user/AdressManage" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
                             <p>
                                 地址管理
@@ -351,7 +351,7 @@
                                 <!-- /.card-body -->
 
                                 <div class="card-footer">
-                                    <button type="submit" class="btn btn-primary">保存</button>
+                                    <button type="submit" class="btn btn-primary" onclick="clickHandle">保存</button>
                                 </div>
                             </form>
                         </div>
