添加了数据库操作

--- a/src/main/resources/templates/user/AddressManage.html
+++ b/src/main/resources/templates/user/AddressManage.html
@@ -277,7 +277,7 @@
             <div class="container-fluid">
 
                 <!-- SELECT2 EXAMPLE -->
-                <div class="card card-default">
+                <div class="card card-default" id="address">
                     <div class="card-header">
                         <input id="addAddress" type="email" class="form-control" placeholder="请输入要添加的地址">
                         <div class="card-tools">
@@ -288,7 +288,7 @@
                     <!-- /.card-header -->
                     <div class="card-header">
                         <div class="row">
-                            <label>四川省双流区文星镇川大路四川大学</label>
+                            <label></label>
                         </div>
                         <!-- /.row -->
                     </div>
@@ -330,6 +330,7 @@
 
 <!-- jQuery -->
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/MyInfoJs/AddressJs.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Select2 -->
