收货地址管理和余额查看充值

--- a/src/main/resources/templates/user/AddressManage.html
+++ b/src/main/resources/templates/user/AddressManage.html
@@ -279,25 +279,13 @@
                 <!-- SELECT2 EXAMPLE -->
                 <div class="card card-default" id="address">
                     <div class="card-header">
-                        <input id="addAddress" type="email" class="form-control" placeholder="请输入要添加的地址">
+                        <input id="newAddress" type="email" class="form-control" placeholder="请输入要添加的地址">
                         <div class="card-tools">
-                            <button type="button" class="btn btn-info">添加</button>
+                            <button type="button" class="btn btn-info" id="addAddress" onclick="AddAddress()">添加</button>
                             </button>
                         </div>
                     </div>
                     <!-- /.card-header -->
-                    <div class="card-header">
-                        <div class="row">
-                            <label></label>
-                        </div>
-                        <!-- /.row -->
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <!-- /.col -->
-                        </div>
-                        <!-- /.row -->
-                    </div>
 
 
                     <!-- /.card-body -->
