--- a/src/main/resources/templates/user/BalanceRecharge.html
+++ b/src/main/resources/templates/user/BalanceRecharge.html
@@ -26,23 +26,23 @@
 
     <div class="card">
         <div class="card-body register-card-body">
-            <p class="login-box-msg">修改密码</p>
+            <p class="login-box-msg">充值余额</p>
 
-            <form action="/AdminLTE-3.0.5/index.html" method="post">
+            <form>
                 <div class="form-group">
                     <label >余额</label>
-                    <p> 300.32元</p>
+                    <p id="balance"></p>
                 </div>
                 <div class="form-group">
                     <label >充值</label>
-                    <input type="password" class="form-control" placeholder="输入充值的金额">
+                    <input id="chargeInput"class="form-control" placeholder="输入充值的金额">
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <button type="submit" class="btn btn-primary btn-block" style="background-color: #dc3545">返回</button>
+                        <a href="/user/MyInformation" class="btn btn-primary btn-block" style="color: white;background-color: red">返回</a>
                     </div>
                     <div class="col-6">
-                        <button type="submit" class="btn btn-primary btn-block">确认</button>
+                        <button type="button" class="btn btn-primary btn-block" onclick="charge()">确认</button>
                     </div>
                     <!-- /.col -->
                 </div>
@@ -55,6 +55,7 @@
 
 <!-- jQuery -->
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/MyInfoJs/charge.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
