--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -194,7 +194,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./BalanceRecharge.html" class="nav-link">
+                        <a href="/balance/balancepage" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 余额充值
