--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -174,7 +174,7 @@
                 </ul>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button"><i class="nav-icon fas fa-shopping-cart"></i></a>
+                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="cart" role="button"><i class="nav-icon fas fa-shopping-cart"></i></a>
             </li>
 
         </ul>
